# try1

./: CMakeLists.txt
include/: common.h
include/attributes_managers/: countries_manager.h  long_ids_manager.h  names_manager.h  users_manager.h  uuids_mapper.h
include/attributes_managers/date_of_birth/: day.h  dobs_manager.h  month.h  year.h
include/common/: common.h  cont_funcs.h  parser.h
include/container/: cont_funcs.h
include/date_of_birth/: day.h  dobs_manager.h  month.h  year.h
include/db_proxy/: db_proxy.h
include/file_handler/: file_reader.h  writer_RRR.h
include/long_ids/: long_ids_manager.h
include/names/: names_holder.h  names_manager.h  uuids_mapper.h
include/users/: parser.h  user.h  users_manager.h
src/: main.cpp
src/attributes_managers/: countries_manager.cpp  long_ids_manager.cpp  names_manager.cpp  users_manager.cpp  uuids_mapper.cpp
src/attributes_managers/date_of_birth/: day.cpp  dobs_manager.cpp  month.cpp  year.cpp
src/common/: cont_funcs.cpp  parser.cpp
src/container/: cont_funcs.cpp
src/date_of_birth/: day.cpp  dobs_manager.cpp  month.cpp  year.cpp
src/db_proxy/: db_proxy.cpp
src/file_handler/: file_reader.cpp  file_wrapper.cpp  writer_RRR.cpp
src/long_ids/: long_ids.cpp
src/names/: names_holder.cpp  names_manager.cpp  uuids_mapper.cpp
src/users/: parser.cpp  user.cpp  users_manager.cpp
